Near completion, minor changes in everthing

--- a/src/components/Dashboard-components/Reviews/IndividualProdReview/IndividualProdReview.css
+++ b/src/components/Dashboard-components/Reviews/IndividualProdReview/IndividualProdReview.css
@@ -8,6 +8,7 @@
     align-items: center;
     margin-top: auto;
     margin-bottom: auto;
+    margin-left : 18px ;
     vertical-align: middle;
     font-family: 'Lato', sans-serif;
 }
